--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -17,6 +17,10 @@ body {
   font-size: 30px;
 }
 
+.header img {
+
+}
+
 .header h1 {
     text-align: left;
     background: antiquewhite;
@@ -28,9 +32,11 @@ body {
 }
 
 .header li {
-    float: right;
+    display: inline;
     font-size: large;
+    float: right;
     margin: 0% 2% 0% 2%;
+    
 
   }
   
@@ -54,7 +60,7 @@ body {
   .about-me h2 {
     border-right-style: solid;
     margin: 2% 3% 4% 1%;
-    padding: 5% 6% 5% 25%;
+    padding: 5% 6% 5% 15%;
     
     float: left;
     
@@ -77,35 +83,45 @@ body {
   }
 
  .work h2 {
-    padding: 12% 8% 13% 29%;
+    padding: 12% 8% 13% 19%;
     margin: 2% 10% 5% 1% ;
     float: left;
     border-right-style: solid;
     
  }
+
+ .work img:hover {
+  box-shadow: 10px 10px 5px #aaaaaa;
+  background-color:rgb(100, 91, 91)
+ }
+
  .work img {
-    float: right;
-    border-style: solid;
-    border-color: darkslategray;
-    margin: 3%;
-    width: 15%;
-    height: 15%;
+  display: block;
+  margin-bottom: 50%;
+  height: 30%;
+  width: 80%;
+  border-style: solid;
+  border-color: darkslategray;
+  border-radius: 10px;
+  
+ }
+
+
+ 
+ .contact-me {
+  display: flex;
  }
 
  .contact-me h2 {
-    margin: 2% 2% 10% 20%;
+    margin: 2% 2% 10% 8%;
     padding: 1% 7% 1% 3%;
     float: left;
     border-right-style: solid;
  }
 
+
 .contact-me li {
-    float: right;
-    margin: 4% 1% 2% 1%;
+  display: inline;
+  
 }
 
-.work img:hover {
-color: rgb(7, 133, 133);
-box-shadow: 3px;
-
-}
